examples/fail/semantic/unknown_type.bina
// EXPECT_SEMANTIC_ERROR: unknown type
fn main() -> int {
    let x: Missing = 1;
    return 0;
}
